--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -19,6 +19,8 @@
     font-weight: 400;
     font-style: normal;
     font-size: var(--body-font);
+    line-height: 140%;
+    letter-spacing: 0.2px;
 }
 
 .outfit-bold {
@@ -26,4 +28,21 @@
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
+    font-size: 22px;
+    line-height: 120%;
+    letter-spacing: 0px;
+}
+
+.qr-image {
+    background-image: url("./images/image-qr-code.png");
+    background-repeat: no-repeat;
+    width: 288px;
+    height: 288px;
+}
+
+body {
+    background: var(--background);
+    max-width: 1440px;
+    max-height: 499px;
+
 }
