--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -15,34 +15,48 @@
 
 .outfit-regular {
     font-family: "Outfit", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
     font-size: var(--body-font);
     line-height: 140%;
     letter-spacing: 0.2px;
+    text-align: center;
 }
 
 .outfit-bold {
     font-family: "Outfit", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
     font-size: 22px;
     line-height: 120%;
     letter-spacing: 0px;
+    text-decoration-color: var(--slate-900);
+    text-align: center;
 }
+
+/* QR Code */
 
 .qr-image {
     background-image: url("./images/image-qr-code.png");
+    width: auto;
+    min-height: 60%;
+    background-size: cover;
     background-repeat: no-repeat;
-    width: 288px;
-    height: 288px;
+    border-radius: 0.5em;
 }
 
 body {
     background: var(--background);
-    max-width: 1440px;
-    max-height: 499px;
+    width: 320px;
+    height: 500px;
+    padding: 1rem;
+    border-radius: 0.5em;
+}
 
+html {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--slate-300);
 }
