--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,3 +1,7 @@
+/* Import "Outfit" */
+
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
 :root {
     --background: hsl(0, 0%, 100%);
     --slate-300: hsl(212, 45%, 89%);
@@ -8,10 +12,6 @@
     --spacing-300: 24px;
     --spacing-500: 40px;
 }
-
-/* Import "Outfit" */
-
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
 .outfit-regular {
     font-family: "Outfit", sans-serif;
@@ -32,6 +32,8 @@
     letter-spacing: 0px;
     text-decoration-color: var(--slate-900);
     text-align: center;
+
+    margin-block-end: 0;
 }
 
 /* QR Code */
@@ -39,15 +41,17 @@
 .qr-image {
     background-image: url("./images/image-qr-code.png");
     width: auto;
-    min-height: 60%;
+    min-height: 55%;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 0.5em;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     background: var(--background);
-    width: 320px;
+    width: 280px;
     height: 500px;
     padding: 1rem;
     border-radius: 0.5em;
@@ -59,4 +63,13 @@ html {
     justify-content: center;
     align-items: center;
     background-color: var(--slate-300);
+}
+
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
 }
