--- a/style.css
+++ b/style.css
@@ -55,6 +55,12 @@ body {
     height: 500px;
     padding: 1rem;
     border-radius: 0.5em;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -140px;
+    margin-left: -250px;
 }
 
 html {
