--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@
     line-height: 140%;
     letter-spacing: 0.2px;
     text-align: center;
+    color: var(--slate-500);
+    margin: 0.5em;
 }
 
 .outfit-bold {
@@ -30,7 +32,7 @@
     font-size: 22px;
     line-height: 120%;
     letter-spacing: 0px;
-    text-decoration-color: var(--slate-900);
+    color: var(--slate-900);
     text-align: center;
 
     margin-block-end: 0;
@@ -41,17 +43,19 @@
 .qr-image {
     background-image: url("./images/image-qr-code.png");
     width: auto;
-    min-height: 55%;
+    min-height: 65%;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 0.5em;
+    padding: 0.5em;
 }
 
-body {
+main {
     display: flex;
+    flex-direction: column;
     background: var(--background);
-    max-width: 280px;
-    height: 500px;
+    max-width: 290px;
+    height: 450px;
     padding: 1rem;
     border-radius: 0.5em;
 
