--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@
     letter-spacing: 0.2px;
     text-align: center;
     color: var(--slate-500);
-    margin: 0.5em;
 }
 
 .outfit-bold {
@@ -56,8 +55,9 @@
 }
 
 main {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
     background: var(--background);
     max-width: 300px;
     height: 475px;
@@ -71,18 +71,13 @@ main {
 }
 
 html {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: var(--slate-300);
-    margin-block-start: 5em;
 }
 
 .attribution {
     font-size: 11px;
     text-align: center;
-    margin-block-start: 1.5rem;
+    margin-block-start: 0.5rem;
 }
 
 .attribution a {
