--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
     letter-spacing: 0.2px;
     text-align: center;
     color: var(--slate-500);
+    margin: 0.5em;
 }
 
 .outfit-bold {
@@ -47,7 +48,7 @@
 .qr-image {
     background-image: url("./images/image-qr-code.png");
     width: 288px;
-    height: 265px;
+    height: 270px;
     background-size: cover;
     background-repeat: no-repeat;
     border-radius: 0.5em;
